do not assume SalBitmap is zero-initialized (tdf#134152)

This code apparently expected that bitmaps are initialized with
the first color in the palette, but that's not guaranteed to be
the case (fails at least with Skia and X11 'gen' bitmaps).

Change-Id: Ie4f7412e0a6c4c1110fc5fbb8ab5bed3c96f652f